--- a/FantasyLogistics/FantasyLogistics.csproj
+++ b/FantasyLogistics/FantasyLogistics.csproj
@@ -12,8 +12,19 @@
 		<PackageReference Include="ImGui.NET" Version="1.89.4" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 		<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+		<PackageReference Include="OpenTK" Version="4.7.7" />
 		<PackageReference Include="Saffron.Util.ImGuiSFML" Version="1.3.0" />
 		<PackageReference Include="SFML.Net" Version="2.5.0" />
+		<PackageReference Include="StbImageSharp" Version="2.27.13" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="Shader\base.frag">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="Shader\base.vert">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 	<ProjectExtensions><VisualStudio><UserProperties json_4defaultworld_1json__JsonSchema="https://json-schema.org/draft/2020-12/schema" /></VisualStudio></ProjectExtensions>
