--- a/FantasyLogistics/FantasyLogistics.csproj
+++ b/FantasyLogistics/FantasyLogistics.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 		<PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
 		<PackageReference Include="OpenTK" Version="4.7.7" />
+		<PackageReference Include="RestSharp" Version="108.0.3" />
 		<PackageReference Include="Saffron.Util.ImGuiSFML" Version="1.3.0" />
 		<PackageReference Include="SFML.Net" Version="2.5.0" />
 		<PackageReference Include="StbImageSharp" Version="2.27.13" />
